--- a/source/index.html
+++ b/source/index.html
@@ -172,7 +172,7 @@
 
       <p class="footer__copyright copyright">
         <b class="copyright__text">
-          Разработано
+          HTML Academy
         </b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <img src="" alt="Ссылка на сайт HTML-академии">
