--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
   <body class="page__body">
 
     <header class="header">
-      <a class="header__logo" href="index.html">
+      <a class="logo--header" href="index.html">
         <img src="" alt="Логотип Кэт Энерджи">
       </a>
 
@@ -46,34 +46,34 @@
             <label for="cat-name">
               Имя:<sup>*</sup>
             </label>
-            <input type="text" name="cat-name" id="cat-name" placeholder="Барсик">
+            <input class="form__input-text" type="text" name="cat-name" id="cat-name" placeholder="Барсик">
 
             <label for="cat-weight">
               Вес (кг):<sup>*</sup>
             </label>
-            <input type="text" name="cat-weight" id="cat-weight" placeholder="7">
+            <input class="form__input-text" type="number" name="cat-weight" id="cat-weight" placeholder="7">
 
             <label for="cat-age">
               Возраст (лет):
             </label>
-            <input type="text" name="cat-age" id="cat-age" placeholder="7">
+            <input class="form__input-text" type="number" name="cat-age" id="cat-age" placeholder="7">
           </fieldset>
 
           <fieldset class="form__variants">
             <label for="sliming">
               Похудение
             </label>
-            <input type="radio" name="variant" value="sliming" id="sliming" checked>
+            <input class="form__input-radio" type="radio" name="variant" value="sliming" id="sliming" checked>
 
             <label for="weight-gain">
               Набор массы
             </label>
-            <input type="radio" name="variant" value="weight-gain" id="weight-gain">
+            <input class="form__input-radio" type="radio" name="variant" value="weight-gain" id="weight-gain">
 
             <label for="need-advice">
               Не знаю (Нужен ваш совет)
             </label>
-            <input type="radio" name="variant" value="need-advice" id="need-advice">
+            <input class="form__input-radio" type="radio" name="variant" value="need-advice" id="need-advice">
           </fieldset>
 
           <fieldset class="form__owner-data">
@@ -83,19 +83,19 @@
             <label for="owner-email">
               E-mail:<sup>*</sup>
             </label>
-            <input type="email" name="owner-email" id="owner-email" placeholder="kuklachev@gmail.com">
+            <input class="form__input-text" type="email" name="owner-email" id="owner-email" placeholder="kuklachev@gmail.com">
 
             <label for="owner-phone">
               Телефон:<sup>*</sup>
             </label>
-            <input type="tel" name="owner-phone" id="owner-phone" placeholder="8 (960) 900-60-90">
+            <input class="form__input-text" type="tel" name="owner-phone" id="owner-phone" placeholder="8 (960) 900-60-90">
           </fieldset>
 
           <fieldset class="form__comment">
             <legend>
               Комментарий
             </legend>
-            <textarea placeholder="Расскажите обо всех повадках кота"></textarea>
+            <textarea class="form__textarea" placeholder="Расскажите обо всех повадках кота"></textarea>
           </fieldset>
 
           <fieldset class="form__additional">
@@ -106,32 +106,35 @@
             <label for="sugar">
               Сахарозаменитель
             </label>
-            <input type="checkbox" name="sugar" id="sugar" checked>
+            <input class="form__input-checkbox" type="checkbox" name="sugar" id="sugar" checked>
 
             <label for="water">
               Питьевая вода
             </label>
-            <input type="checkbox" name="water" id="water">
+            <input class="form__input-checkbox" type="checkbox" name="water" id="water">
 
             <label for="milk">
               Молоко
             </label>
-            <input type="checkbox" name="milk" id="milk">
+            <input class="form__input-checkbox" type="checkbox" name="milk" id="milk">
 
             <label for="vitamins">
               Витамины
             </label>
-            <input type="checkbox" name="vitamins" id="vitamins">
+            <input class="form__input-checkbox" type="checkbox" name="vitamins" id="vitamins">
           </fieldset>
 
-          <input type="submit" value="отправить заявку">
+          <input class="button" type="submit" value="отправить заявку">
         </form>
 
-        <p class="matching__note">
+        <small class="matching__note">
           * — Обязательные поля
-        </p>
+        </small>
       </section>
 
+    </main>
+
+    <footer class="footer">
       <section class="location">
         <div class="location__card">
           <h2 class="location__title">
@@ -142,40 +145,42 @@
             Санкт-Петербург
           </p>
         </div>
+
         <div class="location__map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <img class="location__here" src="" alt="Мы здесь">
         </div>
       </section>
-    </main>
 
-    <footer class="footer">
-      <div class="footer__logo">
-        <img src="" alt="">
+      <div class="footer__bottom">
+        <div class="logo--footer">
+          <img src="" alt="Логотип Кэт Энерджи">
+        </div>
+
+        <div class="social">
+          <a class="social__item social__item--vk" href="">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+          <a class="social__item social__item--ig" href="">
+            <span class="visually-hidden">Инстаграм</span>
+          </a>
+          <a class="social__item social__item--fb" href="">
+            <span class="visually-hidden">Фейсбук</span>
+          </a>
+        </div>
+
+        <p class="copyright">
+          <b class="copyright__text">
+            HTML Academy
+          </b>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <img src="" alt="Ссылка на сайт HTML-академии">
+          </a>
+        </p>
+      </div>
       </div>
 
-      <div class="footer__social">
-        <a class="footer__social-item footer__social-item--vk">
-          <span class="visually-hidden">Вконтакте</span>
-        </a>
-        <a class="footer__social-item footer__social-item--ig">
-          <span class="visually-hidden">Инстаграм</span>
-        </a>
-        <a class="footer__social-item footer__social-item--fb">
-          <span class="visually-hidden">Фейсбук</span>
-        </a>
-      </div>
-
-      <p class="footer__copyright copyright">
-        <b class="copyright__text">
-          HTML Academy
-        </b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="" alt="Ссылка на сайт HTML-академии">
-        </a>
-      </p>
-    </div>
     </footer>
-    
+
 </body>
 
