--- a/source/index.html
+++ b/source/index.html
@@ -135,7 +135,9 @@
           </div>
         </div>
       </section>
+    </main>
 
+    <footer class="footer">
       <section class="location">
         <div class="location__card">
           <h2 class="location__title">
@@ -146,39 +148,41 @@
             Санкт-Петербург
           </p>
         </div>
+
         <div class="location__map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <img class="location__here" src="" alt="Мы здесь">
         </div>
       </section>
-    </main>
 
-    <footer class="footer">
-      <div class="footer__logo">
-        <img src="" alt="">
+      <div class="footer__bottom">
+        <div class="logo--footer">
+          <img src="" alt="Логотип Кэт Энерджи">
+        </div>
+
+        <div class="social">
+          <a class="social__item social__item--vk" href="">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+          <a class="social__item social__item--ig" href="">
+            <span class="visually-hidden">Инстаграм</span>
+          </a>
+          <a class="social__item social__item--fb" href="">
+            <span class="visually-hidden">Фейсбук</span>
+          </a>
+        </div>
+
+        <p class="copyright">
+          <b class="copyright__text">
+            HTML Academy
+          </b>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <img src="" alt="Ссылка на сайт HTML-академии">
+          </a>
+        </p>
+      </div>
       </div>
 
-      <div class="footer__social">
-        <a class="footer__social-item footer__social-item--vk">
-          <span class="visually-hidden">Вконтакте</span>
-        </a>
-        <a class="footer__social-item footer__social-item--ig">
-          <span class="visually-hidden">Инстаграм</span>
-        </a>
-        <a class="footer__social-item footer__social-item--fb">
-          <span class="visually-hidden">Фейсбук</span>
-        </a>
-      </div>
-
-      <p class="footer__copyright copyright">
-        <b class="copyright__text">
-          HTML Academy
-        </b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="" alt="Ссылка на сайт HTML-академии">
-        </a>
-      </p>
-    </div>
     </footer>
 
   </body>
