docs: edit header block; add class button to the same buttons

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
   <body class="page__body">
 
     <header class="header">
-      <a class="header__logo" href="index.html">
+      <a class="logo--header" href="index.html">
         <img src="" alt="Логотип Кэт Энерджи">
       </a>
 
@@ -16,7 +16,7 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
 
-      <nav class="header__navigation navigation visually-hidden">
+      <nav class="navigation visually-hidden">
         <div class="navigation__list">
           <a class="navigation__item" href="index.html">
             Главная
@@ -292,12 +292,12 @@
 
           <li class="catalog__more more">
             <h3 class="more__title">
-
+              Показать еще 100500 товаров
             </h3>
             <p class="more__subtitle">
-
+              На самом деле вкусов гораздо больше!
             </p>
-            <a class="more__button button--disabled"  href="#">
+            <a class="more__button button--secondary"  href="#">
               Заказать
             </a>
           </li>
