--- a/source/form.html
+++ b/source/form.html
@@ -16,7 +16,7 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
 
-      <nav class="header__navigation navigation visually-hidden">
+      <nav class="navigation visually-hidden">
         <div class="navigation__list">
           <a class="navigation__item" href="index.html">
             Главная
