--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   <body class="page__body">
 
     <header class="header">
-      <a class="header__logo">
+      <a class="logo--header">
         <img src="" alt="Логотип Кэт Энерджи">
       </a>
 
@@ -16,7 +16,7 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
 
-      <nav class="header__navigation navigation visually-hidden">
+      <nav class="navigation visually-hidden">
         <div class="navigation__list">
           <a class="navigation__item" href="#">
             Главная
@@ -41,7 +41,7 @@
           Занялся собой? Займись котом!
         </p>
         <img src="" alt="Наша продукция" class="intro__image">
-        <a class="intro__button" href="form.html">
+        <a class="button" href="form.html">
           Подобрать программу
         </a>
       </section>
