docs: edit markup of copyright block

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -423,11 +423,11 @@
         </div>
 
         <p class="copyright">
-          <b class="copyright__text">
-            HTML Academy
-          </b>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <img src="" alt="Ссылка на сайт HTML-академии">
+            <p class="copyright__text">
+              HTML Academy
+            </p>
+            <img class="copyright__logo" src="" alt="Ссылка на сайт HTML-академии">
           </a>
         </p>
       </div>
