--- a/source/index.html
+++ b/source/index.html
@@ -6,19 +6,17 @@
   </head>
 
   <body class="page__body">
-
     <header class="header">
-      <a class="logo--header">
+      <a class="logo logo--header">
         <img src="" alt="Логотип Кэт Энерджи">
       </a>
 
-      <button class="header__toggle" type="button">
+      <nav class="navigation">
+        <button class="navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-
-      <nav class="navigation visually-hidden">
-        <div class="navigation__list">
-          <a class="navigation__item" href="#">
+        <div class="navigation__list navigation__list--hidden">
+          <a class="navigation__item navigation__item--active" href="#">
             Главная
           </a>
           <a class="navigation__item" href="catalog.html">
@@ -29,7 +27,6 @@
           </a>
         </div>
       </nav>
-
     </header>
 
     <main class="main">
@@ -40,36 +37,36 @@
         <p class="intro__text">
           Занялся собой? Займись котом!
         </p>
-        <img src="" alt="Наша продукция" class="intro__image">
         <a class="button" href="form.html">
           Подобрать программу
         </a>
       </section>
 
       <section class="variants">
-        <div class="variants__item variants__item--sliming">
-          <h2 class="variants__title">
+        <h2 class="visually-hidden">Варианты наших программ питания</h2>
+        <article class="variants__item variants__item--sliming">
+          <h3 class="variants__title">
             Похудение
-          </h2>
+          </h3>
           <p class="variants__text">
             Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
           <a class="variants__link" href="catalog.html">
             Каталог Slim
           </a>
-        </div>
+        </article>
 
-        <div class="variants__item variants__item--weight-gain">
-          <h2 class="variants__title">
+        <article class="variants__item variants__item--weight-gain">
+          <h3 class="variants__title">
             Набор массы
-          </h2>
+          </h3>
           <p class="variants__text">
             Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
           <a class="variants__link" href="catalog.html">
             Каталог Pro
           </a>
-        </div>
+        </article>
       </section>
 
       <section class="how-it-work">
@@ -150,13 +147,13 @@
         </div>
 
         <div class="location__map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" width="600" height="450" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <img class="location__here" src="" alt="Мы здесь">
         </div>
       </section>
 
       <div class="footer__bottom">
-        <div class="logo--footer">
+        <div class="logo logo--footer">
           <img src="" alt="Логотип Кэт Энерджи">
         </div>
 
@@ -174,16 +171,12 @@
 
         <p class="copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <p class="copyright__text">
-              HTML Academy
-            </p>
+            HTML Academy
             <img class="copyright__logo" src="" alt="Ссылка на сайт HTML-академии">
           </a>
         </p>
       </div>
       </div>
-
     </footer>
-
   </body>
 </html>
