--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,26 +2,26 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
 
   <body class="page__body">
-
     <header class="header">
-      <a class="logo--header" href="index.html">
+      <a class="logo logo--header" href="index.html">
         <img src="" alt="Логотип Кэт Энерджи">
       </a>
 
-      <button class="header__toggle" type="button">
+      <nav class="navigation">
+        <button class="navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-
-      <nav class="navigation visually-hidden">
-        <div class="navigation__list">
-          <a class="navigation__item" href="index.html">
+        <div class="navigation__list navigation__list--hidden">
+          <a class="navigation__item navigation__item--active" href="#">
             Главная
           </a>
-          <a class="navigation__item" href="#">
+          <a class="navigation__item" href="catalog.html">
             Каталог продукции
           </a>
           <a class="navigation__item" href="form.html">
@@ -29,7 +29,6 @@
           </a>
         </div>
       </nav>
-
     </header>
 
     <main class="main">
@@ -37,16 +36,17 @@
         <h1 class="catalog__title">
           Каталог продукции
         </h1>
-        <ul class="catalog__list">
-          <li class="catalog__item product">
+        <div class="catalog__list">
+          <article class="product">
             <a class="product__image" href="#">
               <img src="" alt="">
             </a>
-            <dl class="product__description">
-              <a class="product__title">
-                Cat Energy PRO 500 г
-              </a>
 
+            <a class="product__title" href="#">
+              Cat Energy PRO 500 г
+            </a>
+
+            <dl class="product__description">
               <dt class="product__property">
                 Масса
               </dt>
@@ -69,20 +69,19 @@
               </dd>
             </dl>
 
-            <a class="catalog__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
+          </article>
 
-          <li class="catalog__item product">
+          <article class="product">
             <a class="product__image" href="#">
               <img src="" alt="">
             </a>
+            <a class="product__title" href="#">
+              Cat Energy PRO 1000 г
+            </a>
             <dl class="product__description">
-              <a class="product__title">
-                Cat Energy PRO 1000 г
-              </a>
-
               <dt class="product__property">
                 Масса
               </dt>
@@ -105,20 +104,19 @@
               </dd>
             </dl>
 
-            <a class="catalog__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
+          </article>
 
-          <li class="catalog__item product">
+          <article class="product">
             <a class="product__image" href="#">
               <img src="" alt="">
             </a>
+            <a class="product__title" href="#">
+              Cat Energy PRO 500 г.
+            </a>
             <dl class="product__description">
-              <a class="product__title">
-                Cat Energy PRO 500 г.
-              </a>
-
               <dt class="product__property">
                 Масса
               </dt>
@@ -141,20 +139,19 @@
               </dd>
             </dl>
 
-            <a class="catalog__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
+          </article>
 
-          <li class="catalog__item product">
+          <article class="product">
             <a class="product__image" href="#">
               <img src="" alt="">
             </a>
+            <a class="product__title" href="#">
+              Cat Energy PRO 1000 г
+            </a>
             <dl class="product__description">
-              <a class="product__title">
-                Cat Energy PRO 1000 г
-              </a>
-
               <dt class="product__property">
                 Масса
               </dt>
@@ -177,20 +174,19 @@
               </dd>
             </dl>
 
-            <a class="catalog__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
+          </article>
 
-          <li class="catalog__item product">
+          <article class="product">
             <a class="product__image" href="#">
               <img src="" alt="">
             </a>
+            <a class="product__title" href="#">
+              Cat Energy SLIM 500 г
+            </a>
             <dl class="product__description">
-              <a class="product__title">
-                Cat Energy SLIM 500 г
-              </a>
-
               <dt class="product__property">
                 Масса
               </dt>
@@ -213,20 +209,19 @@
               </dd>
             </dl>
 
-            <a class="catalog__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
+          </article>
 
-          <li class="catalog__item product">
+          <article class="product">
             <a class="product__image" href="#">
               <img src="" alt="">
             </a>
+            <a class="product__title" href="#">
+              Cat Energy SLIM 1000 г
+            </a>
             <dl class="product__description">
-              <a class="product__title">
-                Cat Energy SLIM 1000 г
-              </a>
-
               <dt class="product__property">
                 Масса
               </dt>
@@ -249,20 +244,19 @@
               </dd>
             </dl>
 
-            <a class="catalog__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
+          </article>
 
-          <li class="catalog__item product">
+          <article class="catalog__item product">
             <a class="product__image" href="#">
               <img src="" alt="">
             </a>
+            <a class="product__title" href="#"git>
+              Cat Energy SLIM 500 г
+            </a>
             <dl class="product__description">
-              <a class="product__title">
-                Cat Energy SLIM 500 г
-              </a>
-
               <dt class="product__property">
                 Масса
               </dt>
@@ -285,23 +279,23 @@
               </dd>
             </dl>
 
-            <a class="catalog__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
+          </article>
 
-          <li class="catalog__more more">
+          <article class="more">
             <h3 class="more__title">
               Показать еще 100500 товаров
             </h3>
             <p class="more__subtitle">
               На самом деле вкусов гораздо больше!
             </p>
-            <a class="more__button button--secondary"  href="#">
+            <a class="button button--secondary" href="#">
               Заказать
             </a>
-          </li>
-        </ul>
+          </article>
+        </div>
       </section>
 
       <section class="additional">
@@ -309,8 +303,8 @@
           Дополнительные товары
         </h2>
 
-        <ul class="additional__list">
-          <li class="additional__item product--additional">
+        <div class="additional__list">
+          <article class="product product--additional">
             <h3 class="product__title">
               Сахарозаменитель
             </h3>
@@ -322,12 +316,12 @@
               200 Р.
             </dd>
 
-            <a class="additional__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
+          </article>
 
-          <li class="additional__item product--additional">
+          <article class="product product--additional">
             <h3 class="product__title">
               Питьевая вода
             </h3>
@@ -339,12 +333,12 @@
               50 Р.
             </dd>
 
-            <a class="additional__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
+          </article>
 
-          <li class="additional__item product--additional">
+          <article class="product product--additional">
             <h3 class="product__title">
               Молоко
             </h3>
@@ -356,12 +350,12 @@
               100 Р.
             </dd>
 
-            <a class="additional__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
+          </article>
 
-          <li class="additional__item product--additional">
+          <article class="product product--additional">
             <h3 class="product__title">
               Витамины
             </h3>
@@ -373,17 +367,17 @@
               300 Р.
             </dd>
 
-            <a class="additional__button button"  href="#">
+            <a class="button" href="#">
               Заказать
             </a>
-          </li>
-        </ul>
-      </section>
+          </article>
 
-      <section class="gift">
-        <h2 class="gift__title">
-          Закажите все и получите чехол для кота в подарок!
-        </h2>
+          <div class="gift">
+            <h2 class="gift__title">
+              Закажите все и получите чехол для кота в подарок!
+            </h2>
+          </div>
+        </div>
       </section>
     </main>
 
@@ -400,13 +394,13 @@
         </div>
 
         <div class="location__map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" width="600" height="450" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <img class="location__here" src="" alt="Мы здесь">
         </div>
       </section>
 
       <div class="footer__bottom">
-        <div class="logo--footer">
+        <div class="logo logo--footer">
           <img src="" alt="Логотип Кэт Энерджи">
         </div>
 
@@ -424,13 +418,12 @@
 
         <p class="copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <p class="copyright__text">
-              HTML Academy
-            </p>
+            HTML Academy
             <img class="copyright__logo" src="" alt="Ссылка на сайт HTML-академии">
           </a>
         </p>
       </div>
       </div>
-
     </footer>
+  </body>
+</html>
