feat: make adaptivity of index.page

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,8 +38,8 @@
         </h1>
         <div class="catalog__list">
           <article class="product">
-            <a class="product__image" href="#">
-              <img src="" alt="">
+            <a class="product__link" href="#">
+              <img class="product__image" src="img/catalog-1.png" width="68px" height="86px" alt="Cat Energy PRO 500 г">
             </a>
 
             <a class="product__title" href="#">
