fix: edit scss and html according validator recomendations

--- a/source/index.html
+++ b/source/index.html
@@ -159,8 +159,8 @@
         </div>
 
         <div class="example__photoproove">
-          <img class="example__photo-before" src="img/before-mobile 1.png" width="" height="" alt="Фото Бориса до">
-          <img class="example__photo-after" src="img/after-mobile 1.png" width="" height="" alt="Фото Бориса после">
+          <img class="example__photo-before" src="img/before-mobile.png" width="311" height="232" alt="Фото Бориса до">
+          <img class="example__photo-after" src="img/after-mobile.png" width="311" height="232" alt="Фото Бориса после">
           <div class="example__range range">
             <p class="range__text">
               Было
@@ -213,13 +213,10 @@
 
         <p class="copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <p class="copyright__text">
               HTML Academy
-            </p>
-            <img class="copyright__logo" src="img/htmlacademy.svg" width="27px" height="34px" alt="Ссылка на сайт HTML-академии">
+            <img class="copyright__logo" src="img/htmlacademy.svg" width="27" height="34" alt="Ссылка на сайт HTML-академии">
           </a>
         </p>
-      </div>
       </div>
     </footer>
   </body>
