fix: add html-academy icon to sprite

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-          <img src="img/logo-mobile.svg" width="190" height="38" alt="Логотип Кэт Энерджи">
+          <img src="img/logo-mobile.svg" alt="Логотип Кэт Энерджи">
         </picture>
         <!--<svg width="190" height="38" viewBox="0 0 190 38" fill="none" xmlns="http://www.w3.org/2000/svg">
           <use xlink:href="file.svg#icon_logo_mobile"></use>
@@ -190,7 +190,10 @@
         <p class="copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
               HTML Academy
-            <img class="copyright__logo" src="img/htmlacademy.svg" width="27" height="34" alt="Ссылка на сайт HTML-академии">
+              <svg width="101" height="18" viewBox="0 0 101 18" fill="black" xmlns="http://www.w3.org/2000/svg">
+                <use xlink:href="file.svg#academy_logo"></use>
+              </svg>
+            <!--<img class="copyright__logo" src="img/htmlacademy.svg" width="27" height="34" alt="Ссылка на сайт HTML-академии">-->
           </a>
         </p>
       </div>
