--- a/source/index.html
+++ b/source/index.html
@@ -40,15 +40,17 @@
 
     <main class="main">
       <section class="intro">
-        <h1 class="intro__title">
-          Функциональное питание для котов
-        </h1>
-        <p class="intro__text">
-          Занялся собой? Займись котом!
-        </p>
-        <a class="button" href="form.html">
-          Подобрать программу
-        </a>
+        <div class="intro__wrapper">
+          <h1 class="intro__title">
+            Функциональное питание для котов
+          </h1>
+          <p class="intro__text">
+            Занялся собой? Займись котом!
+          </p>
+          <a class="button" href="form.html">
+            Подобрать программу
+          </a>
+        </div>
       </section>
 
       <section class="variants">
@@ -99,55 +101,65 @@
       </section>
 
       <section class="example">
-        <div class="example__history">
-          <h2 class="example__title">
-            Живой пример
-          </h2>
-          <p class="example__text">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-          </p>
-        </div>
-        <div class="example__statistic">
-          <dl class="example__list">
-            <div class="example__card">
-              <dt class="example__number">
-                5 КГ
-              </dt>
-              <dd class="example__number-description">
-                снижение веса
-              </dd>
-            </div>
-
-            <div class="example__card">
-              <dt class="example__number">
-                60 ДНЕЙ
-              </dt>
-              <dd class="example__number-description">
-                затрачено времени
-              </dd>
-            </div>
-          </dl>
-          <p class="example__cost">
-            Затраты на питание: 15 000 РУБ.
-          </p>
-        </div>
-
-        <div class="example__photoproove">
-          <img class="example__photo-before" src="img/before-mobile.png" width="311" height="232" alt="Фото Бориса до">
-          <img class="example__photo-after" src="img/after-mobile.png" width="311" height="232" alt="Фото Бориса после">
-          <div class="example__range range">
-            <p class="range__text">
-              Было
-            </p>
-            <div class="range__scale">
-              <div class="range__mark"></div>
-            </div>
-            <p class="range__text">
-              Стало
+        <div class="example__wrapper">
+          <div class="example__history">
+            <h2 class="example__title">
+              Живой пример
+            </h2>
+            <p class="example__text">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
             </p>
           </div>
+          <div class="example__statistic">
+            <dl class="example__list">
+              <div class="example__card">
+                <dt class="example__number">
+                  5 КГ
+                </dt>
+                <dd class="example__number-description">
+                  снижение веса
+                </dd>
+              </div>
+
+              <div class="example__card">
+                <dt class="example__number">
+                  60 ДНЕЙ
+                </dt>
+                <dd class="example__number-description">
+                  затрачено времени
+                </dd>
+              </div>
+            </dl>
+            <p class="example__cost">
+              Затраты на питание: 15 000 РУБ.
+            </p>
+          </div>
+
+          <div class="example__photoproove">
+            <picture class="example__photo-before" width="311" height="232">
+              <source media="(min-width: 768px)" srcset="img/before-desktop.png">
+              <img src="img/before-mobile.png" alt="Фото Бориса до">
+            </picture>
+
+            <picture class="example__photo-after" width="311" height="232">
+              <source media="(min-width: 768px)" srcset="img/after-desktop.png">
+              <img src="img/after-mobile.png" alt="Фото Бориса после">
+            </picture>
+
+            <div class="example__range range">
+              <p class="range__text">
+                Было
+              </p>
+              <div class="range__scale">
+                <div class="range__mark"></div>
+              </div>
+              <p class="range__text">
+                Стало
+              </p>
+            </div>
+          </div>
+        </section>
         </div>
-      </section>
     </main>
 
     <footer class="footer">
@@ -163,39 +175,41 @@
         </div>
 
         <div class="location__map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" width="100%" height="450" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-          <img class="location__here" src="img/we-are-here.svg" alt="Мы здесь">
+          <iframe class="location__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <img class="location__here" src="img/we-are-here.png" alt="Мы здесь">
         </div>
       </section>
 
       <div class="footer__bottom">
-        <div class="logo logo--footer">
-          <svg width="101" height="18" viewBox="0 0 101 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="file.svg#icon_logo_footer"></use>
-          </svg>
-        </div>
+        <div class="footer__wrapper">
+          <div class="logo logo--footer">
+            <svg width="101" height="18" viewBox="0 0 101 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <use xlink:href="file.svg#icon_logo_footer"></use>
+            </svg>
+          </div>
 
-        <div class="social">
-          <a class="social__item social__item--vk" href="">
-            <span class="visually-hidden">Вконтакте</span>
-          </a>
-          <a class="social__item social__item--ig" href="">
-            <span class="visually-hidden">Инстаграм</span>
-          </a>
-          <a class="social__item social__item--fb" href="">
-            <span class="visually-hidden">Фейсбук</span>
-          </a>
-        </div>
+          <div class="social">
+            <a class="social__item social__item--vk" href="">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+            <a class="social__item social__item--ig" href="">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+            <a class="social__item social__item--fb" href="">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </div>
 
-        <p class="copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-              HTML Academy
-              <svg width="101" height="18" viewBox="0 0 101 18" fill="black" xmlns="http://www.w3.org/2000/svg">
-                <use xlink:href="file.svg#academy_logo"></use>
-              </svg>
-            <!--<img class="copyright__logo" src="img/htmlacademy.svg" width="27" height="34" alt="Ссылка на сайт HTML-академии">-->
-          </a>
-        </p>
+          <p class="copyright">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+                HTML Academy
+                <!--<svg width="101" height="18" viewBox="0 0 101 18" fill="black" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="file.svg#academy_logo"></use>-->
+                </svg>
+              <img class="copyright__logo" src="img/htmlacademy-icon.svg" width="27" height="34" alt="Ссылка на сайт HTML-академии">
+            </a>
+          </p>
+        </div>
       </div>
     </footer>
   </body>
