--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body class="page__body">
-    <header class="header">
+    <header class="header header--index">
       <a class="logo logo--header">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
