docs: make basic stylization of catalog page

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -79,8 +79,8 @@
           </article>
 
           <article class="product">
-            <a class="product__image" href="#">
-              <img src="" alt="">
+            <a class="product__link" href="#">
+              <img class="product__image" src="img/catalog-2-mobile.png" width="84px" height="101px" alt="Cat Energy PRO 1000 г">
             </a>
             <a class="product__title" href="#">
               Cat Energy PRO 1000 г
@@ -114,8 +114,8 @@
           </article>
 
           <article class="product">
-            <a class="product__image" href="#">
-              <img src="" alt="">
+            <a class="product__link" href="#">
+              <img class="product__image" src="img/catalog-3-mobile.png" width="68px" height="78px" alt="Cat Energy PRO 500 г">
             </a>
             <a class="product__title" href="#">
               Cat Energy PRO 500 г.
@@ -149,8 +149,8 @@
           </article>
 
           <article class="product">
-            <a class="product__image" href="#">
-              <img src="" alt="">
+            <a class="product__link" href="#">
+              <img class="product__image" src="img/catalog-4-mobile.png" width="84px" height="101px" alt="Cat Energy PRO 500 г">
             </a>
             <a class="product__title" href="#">
               Cat Energy PRO 1000 г
@@ -184,8 +184,8 @@
           </article>
 
           <article class="product">
-            <a class="product__image" href="#">
-              <img src="" alt="">
+            <a class="product__link" href="#">
+              <img class="product__image" src="img/catalog-5-mobile.png" width="68px" height="78px" alt="Cat Energy PRO 500 г">
             </a>
             <a class="product__title" href="#">
               Cat Energy SLIM 500 г
@@ -219,8 +219,8 @@
           </article>
 
           <article class="product">
-            <a class="product__image" href="#">
-              <img src="" alt="">
+            <a class="product__link" href="#">
+              <img class="product__image" src="img/catalog-6-mobile.png" width="84px" height="100px" alt="Cat Energy PRO 500 г">
             </a>
             <a class="product__title" href="#">
               Cat Energy SLIM 1000 г
@@ -254,10 +254,10 @@
           </article>
 
           <article class="catalog__item product">
-            <a class="product__image" href="#">
-              <img src="" alt="">
+            <a class="product__link" href="#">
+              <img class="product__image" src="img/catalog-7-mobile.png" width="72px" height="84px" alt="Cat Energy PRO 500 г">
             </a>
-            <a class="product__title" href="#"git>
+            <a class="product__title" href="#">
               Cat Energy SLIM 500 г
             </a>
             <dl class="product__description">
@@ -296,7 +296,7 @@
               На самом деле вкусов гораздо больше!
             </p>
             <a class="button button--secondary" href="#">
-              Заказать
+              Показать все
             </a>
           </article>
         </div>
@@ -348,7 +348,7 @@
             </h3>
 
             <dt class="product__property">
-              1 литрg
+              1 литр
             </dt>
             <dd class="product__value">
               100 Р.
@@ -406,7 +406,7 @@
       <div class="footer__bottom">
         <div class="footer__wrapper">
           <div class="logo logo--footer">
-            <svg width="101" height="18" viewBox="0 0 101 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <use xlink:href="file.svg#icon_logo_footer"></use>
             </svg>
           </div>
