--- a/source/index.html
+++ b/source/index.html
@@ -25,13 +25,13 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <div class="navigation__list navigation__list--hidden">
-          <a class="navigation__item navigation__item--active" href="#">
+          <a class="navigation__item navigation__item--active navigation__item--index" href="#">
             Главная
           </a>
-          <a class="navigation__item" href="catalog.html">
+          <a class="navigation__item navigation__item--index" href="catalog.html">
             Каталог продукции
           </a>
-          <a class="navigation__item" href="form.html">
+          <a class="navigation__item navigation__item--index" href="form.html">
             Подбор программы
           </a>
         </div>
@@ -60,7 +60,7 @@
             Похудение
           </h3>
           <p class="variants__text">
-            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat <wbr>Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
           <a class="variants__link" href="catalog.html">
             Каталог Slim
@@ -183,7 +183,7 @@
       <div class="footer__bottom">
         <div class="footer__wrapper">
           <div class="logo logo--footer">
-            <svg width="101" height="18" viewBox="0 0 101 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <use xlink:href="file.svg#icon_logo_footer"></use>
             </svg>
           </div>
