--- a/source/index.html
+++ b/source/index.html
@@ -20,11 +20,11 @@
         </svg>-->
       </a>
 
-      <nav class="navigation">
+      <nav class="navigation navigation--opened">
         <button class="navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <div class="navigation__list navigation__list--hidden">
+        <div class="navigation__list">
           <a class="navigation__item navigation__item--active navigation__item--index" href="#">
             Главная
           </a>
