--- a/source/index.html
+++ b/source/index.html
@@ -204,8 +204,8 @@
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
                 HTML Academy
                 <!--<svg width="101" height="18" viewBox="0 0 101 18" fill="black" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="file.svg#academy_logo"></use>-->
-                </svg>
+                  <use xlink:href="file.svg#academy_logo"></use>
+                </svg>-->
               <img class="copyright__logo" src="img/htmlacademy-icon.svg" width="27" height="34" alt="Ссылка на сайт HTML-академии">
             </a>
           </p>
