--- a/source/catalog.html
+++ b/source/catalog.html
@@ -405,12 +405,12 @@
               Заказать
             </a>
           </article>
+        </div>
 
-          <div class="gift">
-            <h2 class="gift__title">
-              Закажите все и получите чехол для кота в подарок!
-            </h2>
-          </div>
+        <div class="gift">
+          <h2 class="gift__title">
+            Закажите все <br>и получите чехол для <br>кота в подарок!
+          </h2>
         </div>
       </section>
     </main>
