fix: edit logo-footer insertion as img-tag

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -439,9 +439,10 @@
       <div class="footer__bottom">
         <div class="footer__wrapper">
           <div class="logo logo--footer">
-            <svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
+            <!--<svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <use xlink:href="file.svg#icon_logo_footer"></use>
-            </svg>
+            </svg>-->
           </div>
 
           <div class="social">
