--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
   <body class="page__body">
     <header class="header">
       <div class="header__wrapper">
-        <a class="logo" href="index.html">
+        <a class="logo logo--header" href="index.html">
           <picture>
             <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
