fix: change direction of svg-sprite; feat: add webp-images at product-1 card

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -46,6 +46,9 @@
           <article class="product">
             <a class="product__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/catalog-1-tablet.webp 1x, img/webp/catalog-1-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/webp/catalog-1-mobile.webp 1x, img/webp/catalog-1-mobile@2x.webp 2x">
+
                 <source media="(min-width: 768px)" srcset="img/catalog-1-tablet.png 1x, img/catalog-1-tablet@2x.png 2x">
                 <img class="product__image" src="img/catalog-1-mobile.png" srcset="img/catalog-1-mobile@2x.png 2x" alt="Cat Energy PRO 500 г">
               </picture>
@@ -436,7 +439,7 @@
         <div class="footer__wrapper">
           <div class="logo logo--footer">
             <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
-            <!--<svg width="128" height="24" xmlns="http://www.w3.org/2000/svg">
+            <!--<svg width="128" height="24" role="img" aria-label="Логотип Кэт Энерджи">
               <use xlink:href="file.svg#logo-footer"></use>
             </svg>-->
           </div>
@@ -444,17 +447,17 @@
           <div class="social">
             <a class="social__item" href="https://vk.com/htmlacademy">
               <svg class="social__icon" width="23" height="16" role="img" aria-label="Мы ВКонтакте">
-                <use xlink:href="file.svg#vk"></use>
+                <use xlink:href="img/file.svg#vk"></use>
               </svg>
             </a>
             <a class="social__item" href="https://www.instagram.com/htmlacademy/">
               <svg class="social__icon social__icon--ig" width="16" height="16" role="img" aria-label="Мы в Инстаграм">
-                <use xlink:href="file.svg#ig"></use>
+                <use xlink:href="img/file.svg#ig"></use>
               </svg>
             </a>
             <a class="social__item" href="https://www.facebook.com/htmlacademy">
               <svg class="social__icon social__icon--fb" width="22" height="22" role="img" aria-label="Мы в Фейсбук">
-                <use xlink:href="file.svg#fb"></use>
+                <use xlink:href="img/file.svg#fb"></use>
               </svg>
             </a>
           </div>
@@ -463,7 +466,7 @@
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
               HTML Academy
               <svg class="copyright__logo" width="27" height="34" role="img">
-                <use xlink:href="file.svg#logo-academy-light"></use>
+                <use xlink:href="img/file.svg#logo-academy-light"></use>
               </svg>
             </a>
           </p>
