--- a/source/form.html
+++ b/source/form.html
@@ -185,17 +185,17 @@
           <div class="social">
             <a class="social__item" href="https://vk.com/htmlacademy">
               <svg class="social__icon" width="23" height="16" role="img" aria-label="Мы ВКонтакте">
-                <use xlink:href="file.svg#vk"></use>
+                <use xlink:href="img/file.svg#vk"></use>
               </svg>
             </a>
             <a class="social__item" href="https://www.instagram.com/htmlacademy/">
               <svg class="social__icon social__icon--ig" width="16" height="16" role="img" aria-label="Мы в Инстаграм">
-                <use xlink:href="file.svg#ig"></use>
+                <use xlink:href="img/file.svg#ig"></use>
               </svg>
             </a>
             <a class="social__item" href="https://www.facebook.com/htmlacademy">
               <svg class="social__icon social__icon--fb" width="22" height="22" role="img" aria-label="Мы в Фейсбук">
-                <use xlink:href="file.svg#fb"></use>
+                <use xlink:href="img/file.svg#fb"></use>
               </svg>
             </a>
           </div>
@@ -204,7 +204,7 @@
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
               HTML Academy
               <svg class="copyright__logo" width="27" height="34" role="img">
-                <use xlink:href="file.svg#logo-academy-light"></use>
+                <use xlink:href="img/file.svg#logo-academy-light"></use>
               </svg>
             </a>
           </p>
