feat: make adaptivity of form page; block example and location-map

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -440,7 +440,7 @@
           <div class="logo logo--footer">
             <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
             <!--<svg width="128" height="24" role="img" aria-label="Логотип Кэт Энерджи">
-              <use xlink:href="file.svg#logo-footer"></use>
+              <use xlink:href="img/file.svg#logo-footer"></use>
             </svg>-->
           </div>
 
